ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser521128/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser521128/input.ts:1:15
  |
1 | module.module { }
  |               ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser521128/input.ts:1:1
  |
1 | module.module { }
  | ^^^^^^^^^^^^^

